--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -16,9 +16,9 @@ jobs:
       fail-fast: false
       matrix:
         version:
-        - ""
+        - "2.2.1"
         include:
-        - version: ""
+        - version: "2.2.1"
           latest: true
 
     steps:
