--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -77,8 +77,8 @@ jobs:
         flavor: |-
           latest=${{ !!matrix.latest }}
         tags: |-
-          type=semver,pattern={{major}}.{{minor}}.{{patch}},value=${{ matrix.version }},enable=${{ matrix.version && matrix.flavor == 'full' }}
-          type=semver,pattern={{major}}.{{minor}}.{{patch}}-${{ matrix.flavor }},value=${{ matrix.version }},enable=${{ matrix.version && matrix.flavor != 'full' }}
+          type=semver,pattern={{major}}.{{minor}}.{{patch}},value=${{ matrix.version }},enable=${{ !!matrix.version && matrix.flavor == 'full' }}
+          type=semver,pattern={{major}}.{{minor}}.{{patch}}-${{ matrix.flavor }},value=${{ matrix.version }},enable=${{ !!matrix.version && matrix.flavor != 'full' }}
 
     - name: Build
       uses: docker/build-push-action@v5.0.0
