--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -21,15 +21,11 @@ jobs:
         version:
         - ""
         - "2.2.1"
-        flavor:
-        - ""
-        - slim
         include:
         - version: ""
           download_url: https://github.com/gpac/gpac/archive/refs/heads/master.tar.gz
         - latest: true
           version: ""
-          flavor: ""
 
     steps:
     - name: Checkout
@@ -78,10 +74,9 @@ jobs:
         flavor: |-
           latest=${{ !!matrix.latest }}
         tags: |-
-          type=raw,value=latest,enable=${{ !matrix.version && !matrix.flavor }}
-          type=raw,value=${{ matrix.flavor }},enable=${{ !matrix.version && !!matrix.flavor }}
-          type=semver,pattern={{major}}.{{minor}}.{{patch}},value=${{ matrix.version }},enable=${{ !!matrix.version && !matrix.flavor }}
-          type=semver,pattern={{major}}.{{minor}}.{{patch}}-${{ matrix.flavor }},value=${{ matrix.version }},enable=${{ !!matrix.version && !!matrix.flavor }}
+          type=raw,value=latest,enable=${{ !matrix.version }}
+          type=semver,pattern={{major}}.{{minor}},value=${{ matrix.version }},enable=${{ !!matrix.version }}
+          type=semver,pattern={{major}}.{{minor}}.{{patch}},value=${{ matrix.version }},enable=${{ !!matrix.version }}
 
     - name: Build
       uses: docker/build-push-action@v5
@@ -90,7 +85,6 @@ jobs:
         context: .
         build-args: |
           version=${{ matrix.version }}
-          flavor=${{ matrix.flavor || 'full' }}
           ${{ matrix.download_url && format('download_url={0}', matrix.download_url) }}
         push: true
         platforms: ${{ matrix.platforms || env.PLATFORMS || 'linux/amd64' }}
