Fix: Reference `nproc`

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -86,7 +86,7 @@ jobs:
         build-args: |
           version=${{ matrix.version }}
           ${{ matrix.download_url && format('download_url={0}', matrix.download_url) }}
-          MAKEFLAGS=-j${{ steps.config.outputs.NPROC }}
+          MAKEFLAGS=-j${{ steps.config.outputs.nproc }}
         push: true
         platforms: ${{ env.PLATFORMS }}
         labels: ${{ steps.meta.outputs.labels }}
